fixing download img alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -150,11 +150,16 @@ div.internal {
         margin-top: 0px;
       }
       a {
-        width: 40%;
         margin: 0 auto;
         margin-top: 60px;
+        $offset: 4%;
+        &:first-of-type {
+          margin-right: $offset;
+        }
+        &:last-of-type {
+          margin-left: $offset;
+        }
         img {
-          width: 100%;
           margin: 0 auto;
           padding: 0;
           display: block;
